fix aliases of root command not work; spigot version added auto command registration